# DeltaPatcher

./: .directory  .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  DeltaPatcher.mk  DeltaPatcher.project  DeltaPatcher.sln  DeltaPatcher.txt  LICENSE.md  README.md  copyright template.txt  resource.rc
.github/workflows/: build.yml  cmake.yml  msbuild.yml  release.yml
app/: CMakeLists.txt
app/include/: DPApp.h
app/include/common/: COPYING.h  common.h  resource.h
app/include/gui/: DeltaPatcherAboutDialog.h  DeltaPatcherDecodePanel.h  DeltaPatcherDropHandler.h  DeltaPatcherDropTarget.h  DeltaPatcherEncodePanel.h  DeltaPatcherMainDialog.h  Logger.h  dpgui.h
app/include/gui/icons/: about_button.xpm  log.xpm  open.xpm  save.xpm
app/include/patcher/: XDeltaPatch.h
app/include/utils/: base64.h
app/linux_stuff/: deltapatcher.dpm  io.github.marco_calautti.DeltaPatcher.desktop  io.github.marco_calautti.DeltaPatcher.metainfo.xml  io.github.marco_calautti.DeltaPatcher.yml
app/linux_stuff/dirstructlinux/usr/share/deltapatcher/it/: deltapatcher.mo
app/mac_stuff/: Info.plist  icon.icns
app/src/: DPApp.cpp
app/src/gui/: DeltaPatcherAboutDialog.cpp  DeltaPatcherDecodePanel.cpp  DeltaPatcherDropTarget.cpp  DeltaPatcherEncodePanel.cpp  DeltaPatcherMainDialog.cpp  dpgui.cpp
app/src/patcher/: XDeltaPatch.cpp
app/src/utils/: base64.cpp
app/win_stuff/: RCa02832  resource.rc
app/wxfb/: copy.bat
graphics/: icon.pdn
include/: DPApp.h
include/common/: COPYING.h  common.h  resource.h
include/patcher/: XDeltaPatch.h
languages/: messages.pot
languages/es_ES/: deltapatcher.po
languages/it/: deltapatcher.po
languages/pt_BR/: deltapatcher.po
libs/: CMakeLists.txt
linux/dirstructlinux/usr/share/applications/: deltapatcherlite.desktop
src/: DPApp.cpp
src/gui/: DeltaPatcherAboutDialog.cpp  DeltaPatcherAboutDialog.h  DeltaPatcherDecodePanel.cpp  DeltaPatcherDecodePanel.h  DeltaPatcherDropHandler.h  DeltaPatcherDropTarget.cpp  DeltaPatcherDropTarget.h  DeltaPatcherEncodePanel.cpp  DeltaPatcherEncodePanel.h  DeltaPatcherMainDialog.cpp  DeltaPatcherMainDialog.h  Logger.h  about.xpm  dpgui.cpp  dpgui.h
src/gui/icons/: about_button.xpm  config.xpm  icon.xpm  log.xpm  open.xpm  save.xpm  switch.xpm
src/patcher/: XDeltaPatch.cpp
stuff/graphics/: icon.pdn
stuff/languages/pt_BR/: deltapatcher.po
stuff/linux/dirstructlinux/usr/share/applications/: deltapatcher.desktop
utils/: make-appimage.sh
vs_project/: DeltaPatcher.vcxproj  DeltaPatcher.vcxproj.filters
wxfb/: DeltaPatcher.fbp  copy.bat
