# wxWidgets
set(wxUSE_REGEX OFF CACHE BOOL "" FORCE)
set(wxUSE_ZLIB builtin CACHE STRING "" FORCE)
set(wxUSE_EXPAT OFF CACHE BOOL "" FORCE)
set(wxUSE_LIBJPEG OFF CACHE BOOL "" FORCE)
set(wxUSE_LIBPNG builtin CACHE STRING "" FORCE)
set(wxUSE_LIBTIFF OFF CACHE BOOL "" FORCE)
set(wxUSE_NANOSVG OFF CACHE BOOL "" FORCE)
set(wxUSE_XML OFF CACHE BOOL "" FORCE)
set(wxBUILD_STRIPPED_RELEASE ON CACHE BOOL "" FORCE)

add_subdirectory(wxWidgets)

# liblzma
add_subdirectory(xz)

#libxdelta3
set(XD3_BUILD_AS_EXE OFF CACHE BOOL "" FORCE)
set(XD3_ENABLE_SECONDARY_COMPRESSION ON CACHE BOOL "" FORCE)
set(XD3_ENABLE_LZMA ON CACHE BOOL "" FORCE)
set(XD3_ENABLE_ENCODER ON CACHE BOOL "" FORCE)
set(XD3_ENABLE_VCDIFF_TOOLS OFF CACHE BOOL "" FORCE)

add_subdirectory(xdelta)



